--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   event_bus: ^1.1.0
   barcode_scan: ^0.0.3
   sensors: ^0.4.0+1
+  english_words: ^3.1.0
 
 dev_dependencies:
   flutter_test:
